--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "Xuanqi Meng（孟暄棋）"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "xuanqimeng at tju.edu.cn"
   location         : "Tianjin/Fushun, Liaoning"
   employer         : "Tianjin University"
   uri              : # URL
